# Real_to_Dollar-

./: README.md
RealToDollar/: pyproject.toml
RealToDollar/backend/: app.py  schemas.py
RealToDollar/backend/services/: corsconfig.py  fetch_exchange.py
RealToDollar/frontend/: index.html
RealToDollar/frontend/scripts/: js.js
RealToDollar/frontend/style/: style.css
RealToDollar/tests/: test_services.py
