[project]
name = "realtodollar"
version = "0.1.0"
description = ""
authors = [
    {name = "ghaluccas", email = "gabsgit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "taskipy (>=1.14.1,<2.0.0)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pytest-asyncio (>=0.25.2,<0.26.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.6,<0.116.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev backend/app.py'
pre_test = 'task lint'
test = 'pytest -s -x -vv'
post_test = 'coverage html'

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]




